dice-game-completed
Completed Dice Game

--- a/index.html
+++ b/index.html
@@ -10,23 +10,25 @@
     <link rel="stylesheet" href="css/main.css">
   </head>
   <body>
+    <main>
+      <!--
+        Step 1: Build the HTML/CSS Prototype to look like this:
 
-    <!--
-      Step 1: Build the HTML/CSS Prototype to look like this:
+           You rolled: three
+             _____________
+            |             |
+            |  0          |
+            |      0      |
+            |          0  |
+            |_____________|
 
-         You rolled: three
-           _____________
-          |             |
-          |  0          |
-          |      0      |
-          |          0  |
-          |_____________|
-
-      Consider the different ways we can write
-      the above site with HTML and/or CSS.
-    -->
-
-
+        Consider the different ways we can write
+        the above site with HTML and/or CSS.
+      -->
+      <label id="dicedesc" for=""></label>
+      <br><br>
+      <img id="diceimg" src="" alt="" />
+    </main>
     <script src="js/main.js"></script>
   </body>
 </html>
